tests/expected_invalid_affine_generic_wrapper_move.diag.out
<input>:12:5: error: affine value 'wrapper' was already moved
        wrapper
        ^^^^^^^
<input>:11:16: note: 'wrapper' was previously moved here
        let copy = wrapper;
                   ^^^^^^^
